# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("recorder") {
  install_enable = true
  sources = [
    "src/recorder.cpp",
    "src/recorder_audio_source.cpp",
    "src/recorder_data_source.cpp",
    "src/recorder_impl.cpp",
    "src/recorder_sink.cpp",
    "src/recorder_video_source.cpp",
  ]
  cflags = [ "-fPIC" ]
  cflags += [ "-Wall" ]
  cflags_cc = cflags
  include_dirs = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//drivers/peripheral/audio/interfaces/include",
    "//drivers/peripheral/codec/interfaces/include",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/format/interfaces/include",
    "//foundation/multimedia/media_standard/frameworks/innerkitsimpl/recorder/include",
    "//third_party/bounds_checking_function/include",
    "//utils/native/base/include",
  ]
  public_configs = [ ":recorder_external_library_config" ]
  ldflags = [ "-lformat_hw" ]
  ldflags += [ "-L../../device/hisilicon/hardware/media/hal/format/hi3516dv300/llvm/ext/libs" ]
  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/graphic/standard:libsurface",
    "//foundation/multimedia/media_standard/frameworks/innerkitsimpl/common:media_common",
    "//third_party/bounds_checking_function:libsec_static",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ipc:ipc_core",
    "multimedia_audio_standard:audio_capturer",
  ]
  part_name = "multimedia_media_standard"
  subsystem_name = "multimedia"
}

config("recorder_external_library_config") {
  include_dirs = [ "//foundation/graphic/standard/interfaces/kits/surface" ]
  include_dirs += [ "//foundation/multimedia/media_standard/interfaces/innerkits/native/include" ]
}
