# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
MEDIA_ROOT_DIR = "//foundation/multimedia/player_framework"

config("media_capi_config") {
  include_dirs = [
    "$MEDIA_ROOT_DIR/interfaces/inner_api/native",
    "$MEDIA_ROOT_DIR/interfaces/kits/c",
    "$MEDIA_ROOT_DIR/frameworks/native/capi/avcodec",
    "$MEDIA_ROOT_DIR/frameworks/native/capi/common",
    "//foundation/graphic/graphic_2d/frameworks/surface/include",
  ]

  cflags = [
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-Wformat=2",
    "-Wdate-time",
  ]

  cflags_cc = [
    "-std=c++17",
    "-fno-rtti",
  ]
  output_extension = "so"
}

ohos_shared_library("native_media_core") {
  install_enable = true
  sources = [
    "$MEDIA_ROOT_DIR/frameworks/native/capi/common/native_avformat.cpp",
    "$MEDIA_ROOT_DIR/frameworks/native/capi/common/native_avmemory.cpp",
  ]

  public_configs = [ ":media_capi_config" ]

  deps = [
    "//foundation/multimedia/player_framework/interfaces/inner_api/native:media_client",
    "//foundation/multimedia/player_framework/services/utils:media_format",
    "//foundation/multimedia/player_framework/services/utils:media_service_utils",
    "//utils/native/base:utils",
  ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  subsystem_name = "multimedia"
  part_name = "multimedia_player_framework"
}

ohos_shared_library("native_media_codecbase") {
  install_enable = true
  sources = [
    "$MEDIA_ROOT_DIR/frameworks/native/capi/avcodec/native_avcodec_base.cpp",
  ]

  public_configs = [ ":media_capi_config" ]

  deps = [
    "//foundation/multimedia/player_framework/services/utils:media_service_utils",
    "//utils/native/base:utils",
  ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  subsystem_name = "multimedia"
  part_name = "multimedia_player_framework"
}

ohos_shared_library("native_media_adec") {
  install_enable = true
  sources = [
    "$MEDIA_ROOT_DIR/frameworks/native/capi/avcodec/native_audio_decoder.cpp",
  ]

  public_configs = [ ":media_capi_config" ]

  deps = [
    "//foundation/multimedia/player_framework/interfaces/inner_api/native:media_client",
    "//foundation/multimedia/player_framework/interfaces/kits/c:native_media_codecbase",
    "//foundation/multimedia/player_framework/interfaces/kits/c:native_media_core",
    "//foundation/multimedia/player_framework/services/utils:media_service_utils",
    "//utils/native/base:utils",
  ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  subsystem_name = "multimedia"
  part_name = "multimedia_player_framework"
}

ohos_shared_library("native_media_aenc") {
  install_enable = true
  sources = [
    "$MEDIA_ROOT_DIR/frameworks/native/capi/avcodec/native_audio_encoder.cpp",
  ]

  public_configs = [ ":media_capi_config" ]

  deps = [
    "//foundation/multimedia/player_framework/interfaces/inner_api/native:media_client",
    "//foundation/multimedia/player_framework/interfaces/kits/c:native_media_codecbase",
    "//foundation/multimedia/player_framework/interfaces/kits/c:native_media_core",
    "//foundation/multimedia/player_framework/services/utils:media_service_utils",
    "//utils/native/base:utils",
  ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  subsystem_name = "multimedia"
  part_name = "multimedia_player_framework"
}

ohos_shared_library("native_media_vdec") {
  install_enable = true
  sources = [
    "$MEDIA_ROOT_DIR/frameworks/native/capi/avcodec/native_video_decoder.cpp",
  ]

  public_configs = [
    ":media_capi_config",
    "//foundation/graphic/graphic_2d/frameworks/surface:surface_public_config",
  ]

  deps = [
    "//foundation/graphic/graphic_2d/frameworks/surface:surface",
    "//foundation/multimedia/player_framework/interfaces/inner_api/native:media_client",
    "//foundation/multimedia/player_framework/interfaces/kits/c:native_media_codecbase",
    "//foundation/multimedia/player_framework/interfaces/kits/c:native_media_core",
    "//foundation/multimedia/player_framework/services/utils:media_service_utils",
    "//utils/native/base:utils",
  ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  subsystem_name = "multimedia"
  part_name = "multimedia_player_framework"
}

ohos_shared_library("native_media_venc") {
  install_enable = true
  sources = [
    "$MEDIA_ROOT_DIR/frameworks/native/capi/avcodec/native_video_encoder.cpp",
  ]

  public_configs = [
    ":media_capi_config",
    "//foundation/graphic/graphic_2d/frameworks/surface:surface_public_config",
  ]

  deps = [
    "//foundation/graphic/graphic_2d/frameworks/surface:surface",
    "//foundation/multimedia/player_framework/interfaces/inner_api/native:media_client",
    "//foundation/multimedia/player_framework/interfaces/kits/c:native_media_codecbase",
    "//foundation/multimedia/player_framework/interfaces/kits/c:native_media_core",
    "//foundation/multimedia/player_framework/services/utils:media_service_utils",
    "//utils/native/base:utils",
  ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  subsystem_name = "multimedia"
  part_name = "multimedia_player_framework"
}
