# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("media_engine_gst_plugins_package") {
  deps = [
    "plugins:media_engine_gst_plugins",
  ]
}

ohos_shared_library("media_engine_gst") {
  deps = [
    "recorder:media_engine_gst_recorder",
    "player:media_engine_gst_player",
    "avmetadatahelper:media_engine_gst_avmeta",
    "common:media_engine_gst_common",
    ":media_engine_gst_plugins_package"
  ]

  relative_install_dir = "media"
  subsystem_name = "multimedia"
  part_name = "multimedia_media_standard"
}