# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("media_player_engine_config") {
  visibility = [ ":*" ]

  cflags = [
    "-std=c++17",
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
  ]

    include_dirs = [
    "//utils/native/base/include",
    "//foundation/multimedia/media_standard/services/utils/include",
    "//foundation/multimedia/media_standard/interfaces/innerkits/native/media/include",
    "//foundation/multimedia/media_standard/services/player/engine/include",
    "//drivers/peripheral/audio/interfaces/include",
    "//drivers/framework/include/utils/",
    "//drivers/peripheral/display/interfaces/include",
    "//foundation/multimedia/media_standard/services/player/engine/player_register",
    "//foundation/multimedia/media_standard/services/player/engine/gstplayer_engine",
    "//foundation/multimedia/audio_standard/frameworks/innerkitsimpl/common/include",
    "//foundation/multimedia/audio_standard/interfaces/innerkits/native/audiocommon/include",
    "//foundation/multimedia/audio_standard/interfaces/innerkits/native/audiomanager/include",    
    "//third_party/gstreamer/gstreamer",
    "//third_party/gstreamer/gstreamer/libs",
    "//third_party/gstreamer/gstplugins_base",
    "//third_party/gstreamer/gstplugins_base/gst-libs",
    "//third_party/gstreamer/gstplugins_bad/gst-libs",
    "//third_party/glib/glib",
    "//third_party/glib",
    "//third_party/glib/gmodule",
    "//device/hisilicon/hispark_taurus/sdk_linux/soc/src/mpp/cbb/include",
    "//device/hisilicon/hispark_taurus/sdk_linux/soc/src/osal/include",
  ]
}

ohos_shared_library("media_player_engine") {
  install_enable = true

  sources = [
    "gstplayer_engine/player_engine_gst_impl.cpp",
    "//foundation/multimedia/media_standard/services/player/engine/i_player_engine.cpp",
    "//foundation/multimedia/media_standard/services/player/engine/player_register/player_register.cpp",
    "gstplayer_engine/gst_player_build.cpp",
    "gstplayer_engine/gst_player_ctrl.cpp",
    "gstplayer_engine/gst_player_video_renderer_ctrl.cpp",
  ]

  configs = [
    ":media_player_engine_config",
    "//foundation/graphic/standard/frameworks/surface:surface_public_config",
    "//foundation/multimedia/media_standard/services/utils:media_service_utils_public_config",
  ]

  deps = [
    "//foundation/multimedia/media_standard/services/utils:media_service_utils",
    "//foundation/graphic/standard:libsurface",
    "//foundation/multimedia/audio_standard/interfaces/innerkits/native/audiomanager:audio_client",    
    "//third_party/gstreamer/gstreamer:gstreamer",
    "//third_party/gstreamer/gstreamer:gstbase",
    "//third_party/gstreamer/gstplugins_base:gstvideo",
    "//third_party/gstreamer/gstplugins_base:gstaudio",
    "//third_party/gstreamer/gstplugins_base:gstapp",
    "//third_party/gstreamer/gstplugins_bad:gstplayer",
    "//third_party/glib:glib",
    "//third_party/glib:gobject",
    "//third_party/glib:gmodule",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  subsystem_name = "multimedia"
  part_name = "multimedia_media_standard"
}
