# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("media_plugins") {
    deps = [
        "//foundation/multimedia/media_standard/services/plugins:media_plugins"
    ]
}

config("media_recorder_engine_config") {
  visibility = [ ":*" ]

  cflags = [
    "-std=c++17",
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
  ]

  include_dirs = [
    "//utils/native/base/include",
    "//foundation/multimedia/media_standard/services/utils/include",
    "//foundation/multimedia/media_standard/interfaces/innerkits/native/media/include",
    "include",
    "histream_engine",
    "histream_engine/element_wrapper",
    "//third_party/gstreamer/gstreamer",
    "//third_party/gstreamer/gstreamer/libs",
    "//third_party/gstreamer/gstplugins_base",
    "//third_party/gstreamer/gstplugins_base/gst-libs",
    "//third_party/gstreamer/gstplugins_bad/gst-libs",
    "//third_party/glib/glib",
    "//third_party/glib",
    "//third_party/glib/gmodule",
  ]
}

ohos_shared_library("media_recorder_engine") {
  install_enable = true

  sources = [
    "i_recorder_engine.cpp",
    "histream_engine/recorder_engine_hst_impl.cpp",
    "histream_engine/recorder_pipeline.cpp",
    "histream_engine/recorder_pipeline_ctrler.cpp",
    "histream_engine/recorder_pipeline_builder.cpp",
    "histream_engine/recorder_pipeline_link_helper.cpp",
    "histream_engine/recorder_element.cpp",
    "histream_engine/element_wrapper/video_source.cpp",
    "histream_engine/element_wrapper/mux_sink_bin.cpp",
    "histream_engine/element_wrapper/audio_source.cpp",
    "histream_engine/element_wrapper/audio_encoder.cpp",
  ]

  configs = [
    ":media_recorder_engine_config",
    "//foundation/multimedia/media_standard/services/utils:media_service_utils_public_config",
    "//foundation/graphic/standard/frameworks/surface:surface_public_config"
  ]

  deps = [
    "//foundation/multimedia/media_standard/services/utils:media_service_utils",
    "//foundation/graphic/standard/frameworks/surface:surface",
    "//third_party/gstreamer/gstreamer:gstreamer",
    "//third_party/gstreamer/gstreamer:gstbase",
    "//third_party/gstreamer/gstplugins_base:gstvideo",
    "//third_party/gstreamer/gstplugins_base:gstaudio",
    "//third_party/glib:glib",
    "//third_party/glib:gobject",
    "//third_party/glib:gmodule",
    ":media_plugins",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  subsystem_name = "multimedia"
  part_name = "multimedia_media_standard"
}
