# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
module_output_path = "player_framework/fuzztest"

##############################fuzztest##########################################
ohos_fuzztest("PlayerFileFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "//foundation//multimedia/player_framework/test/fuzztest/playerfile_fuzzer"

  include_dirs = [
    "//foundation/multimedia/player_framework/interfaces/inner_api/native",
    "//foundation/multimedia/player_framework/services/utils/include",
    "//graphic/graphic_2d/interfaces/innerkits/surface",
    "//foundation/window/window_manager/interfaces/innerkits/wm",
    "//foundation/multimedia/player_framework/test/fuzztest/",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "../test_player.cpp",
    "playerfile_fuzzer.cpp",
  ]
  deps = [
    "//foundation/graphic/graphic_2d:libsurface",
    "//foundation/graphic/graphic_2d/frameworks/surface:surface",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client",
    "//foundation/window/window_manager/wm:libwm",
  ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_player_framework:media_client",
  ]
}

###############################################################################

