# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
module_output_path = "media_standard/fuzztest"

##############################fuzztest##########################################
ohos_fuzztest("PlayerSetVolumeFuzzTest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/media_standard/interfaces/inner_api/native",
    "//foundation/multimedia/media_standard/services/utils/include",
    "//graphic/standard/interfaces/innerkits/surface",
    "//foundation/windowmanager/interfaces/innerkits/wm",
    "//foundation/multimedia/media_standard/test/fuzztest/",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "../test_player.cpp",
    "test_player_setvolume_fuzzer.cpp",
  ]
  deps = [
    "//foundation/graphic/standard:libsurface",
    "//foundation/graphic/standard/frameworks/surface:surface",
    "//foundation/graphic/standard/rosen/modules/render_service_client:librender_service_client",
    "//foundation/windowmanager/wm:libwm",
  ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_media_standard:media_client",
  ]
}

###############################################################################

